--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "ant-design-vue": "^4.2.3",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
-    "axios": "^1.7.2",
-    "vue": "^3.4.29"
+    "vue-router": "^4.4.0",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
