--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.3",
+    "axios": "^1.7.2",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0",
-    "axios": "^1.7.2"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
