--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "vue": "^3.4.29",
     "vue-axios": "^3.5.2",
+    "vue-request": "^2.0.4",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
